Refine metadata backend to extend context about data set
